--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://paintball-inventory.ccqyimiei2zx.us-east-2.rds.amazonaws.com:3306/paintball
 spring.datasource.username=admin
 spring.datasource.password=!Hockey25
+server.port=5000
